[package]
name = "tokio-named-pipes"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Nikolay Volf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/tokio-named-pipes"
homepage = "https://github.com/nikvolf/tokio-named-pipes"
description = """
Windows named pipe bindings for tokio.
"""

[dependencies]
mio = { git = "https://github.com/hankbao/mio.git", branch = "v0.6.x-windows" }
tokio = { git = "https://github.com/hankbao/tokio.git", branch = "v0.1.x-windows" }
mio-named-pipes = { git = "https://github.com/hankbao/mio-named-pipes.git", branch = "custom" }
futures = "0.1"
bytes = "0.4"
